--- a/views/tickets/ver.ejs
+++ b/views/tickets/ver.ejs
@@ -29,55 +29,68 @@
 
 <body class="body">
   <%- include('navbar')%>
-    <div class="d-flex justify-content-center mt-5 text-white">
-      <div class="d-flex flex-column w-50 text-center bd-highlight mb-3 border border-2 rounded-3 ">
-        <div class="p-2 color-head text-white rounded-3 bd-highlight">
+    <div class="container">
+      <br>
+      <h5 style="color: dimgrey;">Ticket N° <%=ticket.id%>
+      </h5>
+      <div>
+        <a style="background-color: #00a09d; color: white; display: inline-block;"  class="btn" onclick="history.back()">Regresar</a>
+        <form style="display: inline-block;" class="form-inline" method="get" action="/tickets/codigo-de-barras/<%=ticket.id%>" enctype="multipart/form-data">
+          <button class="btn btn-light" type="submit">Imprimir</button>
+        </form>
+      </div>
+      
+      <div class="d-flex justify-content-center mt-5 text-white">
 
-          <h5>Detalles de la Paca </h5>
-        </div>
+        <div class="d-flex flex-column w-50 text-center bd-highlight mb-3 border border-2 rounded-3 ">
+          <div class="p-2 color-head text-white rounded-3 bd-highlight">
 
-        
-        <div class="p-2 bg-white rounded-3 bd-highlight">
-          <div class="row ">
+            <h5>Detalles de la Paca </h5>
+          </div>
 
-            <div class=" col-5">
-              <label>Número de paca: <br>
-                <%=ticket.n_paca%>
-              </label>
-              <label>Variedad: <%=ticket.variedad%></label><br>
-              <label>Clase: <%=ticket.clase%></label><br>
-              <label>Tamaño: <%=ticket.tamano%></label>
-              
-            </div>
-            <div class=" col-5">
-              <label>Fecha de elaboración: <%= new Date(ticket.fecha_elaboracion).toLocaleDateString('es-ES') %></label>
-              <label>Gavillas funda: <%=ticket.gavillas_funda%></label>
-              <label>Gavillas paca: <%=ticket.gavillas_paca%></label><br>
-              
-              <label>Prom. gavillas: <%=ticket.prom_gavillas%></label>
+
+          <div class="p-2 bg-white rounded-3 bd-highlight">
+            <div class="row ">
+
+              <div class=" col-5">
+                <label>Número de paca: <br>
+                  <%=ticket.n_paca%>
+                </label>
+                <label>Variedad: <%=ticket.variedad%></label><br>
+                <label>Clase: <%=ticket.clase%></label><br>
+                <label>Tamaño: <%=ticket.tamano%></label>
+
+              </div>
+              <div class=" col-5">
+                <label>Fecha de elaboración: <%= new Date(ticket.fecha_elaboracion).toLocaleDateString('es-ES') %>
+                </label>
+                <label>Gavillas funda: <%=ticket.gavillas_funda%></label>
+                <label>Gavillas paca: <%=ticket.gavillas_paca%></label><br>
+
+                <label>Prom. gavillas: <%=ticket.prom_gavillas%></label>
               </div>
 
               <div><canvas id="barcode"></canvas></div>
-  <script>
-    const barcodeData = '<%=ticket.n_paca%>';
-    bwipjs.toCanvas(document.getElementById('barcode'), {
-      bcid: 'code128',
-      text: barcodeData,
-      scale: 1,
-      height: 14,
-      includetext: false,
-      textxalign: 'center'
-    }, function (err, canvas) {
-      if (err) {
-        console.log(err);
-      }
-    });
-  </script>
+              <script>
+                const barcodeData = '<%=ticket.n_paca%>';
+                bwipjs.toCanvas(document.getElementById('barcode'), {
+                  bcid: 'code128',
+                  text: barcodeData,
+                  scale: 1,
+                  height: 14,
+                  includetext: false,
+                  textxalign: 'center'
+                }, function (err, canvas) {
+                  if (err) {
+                    console.log(err);
+                  }
+                });
+              </script>
+            </div>
           </div>
         </div>
-      </div>
 
-    </div>
+      </div>
     </div>
 </body>
 
