--- a/views/login/users.ejs
+++ b/views/login/users.ejs
@@ -20,81 +20,37 @@
         <div class="d-flex justify-content-center mt-5 text-white">
             <div class="d-flex flex-column w-50 text-center bg-white border border-2 rounded-3  ">
                 <div class="actualizar text-white color-head rounded-3">
-                    <h1 style="font-weight:bold;">Crear usuario</h1>
+                    <h5 style="font-weight:bold;">Crear usuario</h5>
                 </div> 
                 <div class="m-5">
-                    <form action="/salvar" method="POST">
+                    <form action="/users" method="POST">
                         <div class="row align-items-start">
                             <input type="text" id="id" name="id" hidden value="">
                             <div class="col text-black">
-                                <label for="user" class="form-label"style="font-weight:bold; font-size: 15px;">USER</label>
+                                <label for="user" class="form-label"style="font-weight:bold; font-size: 15px;">User</label>
                                 <input type="text"class="form-control" style="font-weight:bold;font-size: 13px;" name="user" required tabindex="1" autofocus>
                             </div>
                             <div class="col text-black">
-                                <label for="user"class="form-label"style="font-weight:bold; font-size: 15px;">FULL NAME</label>
+                                <label for="user"class="form-label"style="font-weight:bold; font-size: 15px;">Full Name</label>
                                 <input type="text" class="form-control"style="font-weight:bold;font-size: 13px;"name="name" required tabindex="2">
                             </div>
                             <div class="col text-black">
-                                <label for="rol"class="form-label"style="font-weight:bold; font-size: 15px;">ROL</label>                          
+                                <label for="rol"class="form-label"style="font-weight:bold; font-size: 15px;">Rol</label>                          
                                 <select id="rol" class="form-control"name="rol" style="font-weight:bold;font-size: 13px;"class="select-css" tabindex="3">
                                     <option value="admin" >Admin</option>
                                     <option value="user" selected>user</option>                    
                                 </select>
                             </div>
                             <div class="col text-black">
-                                <label for="pass"class="form-label"style="font-weight:bold; font-size: 15px;">PASSWORD</label><br> 
+                                <label for="pass"class="form-label"style="font-weight:bold; font-size: 15px;">Password</label><br> 
                                 <input type="password" class="form-control"name="password" style="font-weight:bold;font-size: 13px;"required tabindex="4">
                             </div>
                             <div class="col text-black">
-                                <input type="submit" class="btn color-btn text-white p-2 m-4" style="font-weight:bold; font-size: 15px;"value="CREAR">
+                                <input type="submit" class="btn color-btn text-white p-2 m-4" style="font-weight:bold; font-size: 15px;"value="Registrar">
                             </div>
                         </div>
                     </form>
                 </div>
-                <table class="container table table-primary table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col">ID</th>
-                            <th scope="col">USER</th>
-                            <th scope="col">FULL NAME</th>
-                            <th scope="col">ROL</th>
-                            <th scope="col">ACCION</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tableBody">
-
-                    <% for( let usuario=0; usuario < usuario1.length; usuario++ ) { %>
-                        <tr>
-                            <td>
-                                <%=usuario1[usuario].id%>
-                            </td>
-                        </tr>
-                        <% } %>
-                            </tbody>
-                </table>
-
-                <div class="pagination">
-                    <% if (pageInfo.hasPreviousPage) { %>
-                      <a href="?page=<%= pageInfo.previousPage %>">Anterior</a>
-                    <% } else { %>
-                      <span class="disabled">Anterior   </span>
-                    <% } %>
-                  
-                    <% for (let i = pageInfo.startPage; i <= pageInfo.endPage; i++) { %>
-                      <% if (i === pageInfo.currentPage) { %>
-                        <span class="current"><%= i %></span>
-                      <% } else { %>
-                        <a href="?page=<%= i %>"><%= i %></a>
-                      <% } %>
-                    <% } %>
-                    <% if (pageInfo.hasNextPage) { %>
-                      <a href="?page=<%= pageInfo.nextPage %>">Siguiente</a>
-                    <% } else { %>
-                      <span class="disabled">Siguiente</span>
-                    <% } %>
-                  </div>
-                  
-            </div>
             </div>
         </div>
     </div>
