--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -25,16 +25,16 @@
     <div class="d-flex flex-column w-25 text-center bd-highlight mb-3">
       <div class="form-control">
         <div class="p-2 color-head text-white rounded-3 bd-highlight">
-          <h1 style="font-weight: bold;">INICIO DE SESIÓN</h1>
+          <h5 style="font-weight: bold;">Inicio de Sesión</h5>
         </div>
         <form action="auth" method="POST">
-          <label for="user" style="font-weight: bold; font-size: 15px;" class="mb-3">NOMBRE USUARIO</label>
+          <label for="user" style="font-weight: bold; font-size: 13px;" class="mb-3">Nombre de usuario</label>
           <input type="text" name="user" placeholder="User" class="form-control text-center mb-3"
-            style="font-weight: bold;" autofocus required>
-          <label for="pass" style="font-weight: bold; font-size: 15px;" class="mb-3">CONTRASEÑA</label>
+            style="font-weight: bold;font-size: 13px;" autofocus required>
+          <label for="pass" style="font-weight: bold; font-size: 13px;" class="mb-3">Contraseña</label>
           <input type="password" name="password" class="form-control text-center mb-3" placeholder="Password"
-            style="font-weight: bold;" required>
-          <input type="submit" class="btn color-btn text-white form-control" style="font-weight: bold; font-size: 15px;"
+            style="font-weight: bold;font-size: 13px;" required>
+          <input type="submit" class="btn color-btn text-white form-control" style="font-weight: bold; font-size: 13px;"
             value="LOGIN">
         </form>
       </div>
