--- a/views/login/verusuarios.ejs
+++ b/views/login/verusuarios.ejs
@@ -105,10 +105,10 @@
             <table id="table">
                 <thead>
                     <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">USER</th>
-                        <th scope="col">FULL NAME</th>
-                        <th scope="col">ROL</th>
+                        <th scope="col">Id</th>
+                        <th scope="col">User</th>
+                        <th scope="col">Full name</th>
+                        <th scope="col">Rol</th>
                         <th scope="col" style="text-align: center;">ACCION</th>
                     </tr>
                 </thead>
