--- a/views/login/verusuarios.ejs
+++ b/views/login/verusuarios.ejs
@@ -129,7 +129,7 @@
                             <%=usuario1[user].rol%>
                         </td>
                         <td>
-                            <a href="/delete/<%=usuario1[user].id%>"><button class="btn btn-danger"><i class="fa fa-trash"></i>Borrar</button></a>
+                            <a href="/delete/<%=usuario1[user].id%>"><button class="btn btn-danger">Borrar</button></a>
                         </td>
                     </tr>
                     <% } %>
