--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -20,13 +20,16 @@
   </style>
 </head>
 <body class="body">
+  <% if (message) { %>
+    <p><%= message %></p>
+  <% } %>
   <div class="d-flex justify-content-center mt-5 rounded-3 text-white" style="opacity: 0.9;">
     <div class="d-flex flex-column w-25 text-center bd-highlight mb-3">
       <div class="form-control">
         <div class="p-2 color-head text-white rounded-3 bd-highlight">
           <h5 style="font-weight: bold;">Inicio de Sesión</h5>
         </div>
-        <form action="login" method="POST">
+        <form action="/login" method="POST">
           <label for="user" style="font-weight: bold; font-size: 13px;" class="mb-3">Nombre de usuario</label>
           <input type="text" name="user" placeholder="User" class="form-control text-center mb-3"
             style="font-weight: bold;font-size: 13px;" autofocus required>
