--- a/views/tickets/navbar.ejs
+++ b/views/tickets/navbar.ejs
@@ -19,6 +19,7 @@
                     <li class="nav-item">
                         <a class="nav-link text-white ch" href="/tickets/buscar">Buscar</a>
                     </li>
+                    <li><a class="nav-link text-white ch" href="/logout" style="align-content: end;">Salir</a></li>
                 </ul>
             </div>
           
