--- a/views/tickets/crear.ejs
+++ b/views/tickets/crear.ejs
@@ -30,7 +30,7 @@
                             <h3>
                               <label for="paca" class="form-label"style="font-weight:bold; font-size: 12px;">Número de paca</label><br>
                             </h3>
-                            <input type="text" minlength="11" style="font-size: 12px;" maxlength="11"class="form-control" name="n_paca" >
+                            <input type="text" style="font-size: 12px;" class="form-control" name="n_paca" >
                         </div>
                         <div class="col m-3">
                             <h3>
