--- a/views/tickets/crear.ejs
+++ b/views/tickets/crear.ejs
@@ -1,94 +1,114 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tickets Gavillas</title>
-    <link rel="stylesheet" href="resources/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <style>
-    .color-btn{
-	    background-color: #00a09d;
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tickets Gavillas</title>
+  <link rel="stylesheet" href="resources/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <style>
+    .color-btn {
+      background-color: #00a09d;
     }
-    .color-head{
+
+    .color-head {
       background-color: #875a7b;
     }
   </style>
 </head>
-<body class="body">
-    <%- include('navbar')%>
-        <div class="d-flex justify-content-center text-white mt-5">
-            <div class="d-flex flex-column w-50 text-center bd-highlight mb-3 border border-2 rounded-3 ">
-            <div class="actualizar text-white color-head rounded-3">
-                <h5 style="font-weight:bold;">Registro de etiquetas fundas de capa</h5>
-            <div class="container bg-white text-black rounded-3">
-                <form action="/tickets" method="POST">
-                    <div class="row align-items-start">
-                        <div class="col m-3">
-                            <h3>
-                              <label for="paca" class="form-label"style="font-weight:bold; font-size: 12px;">Número de paca</label><br>
-                            </h3>
-                            <input type="text" style="font-size: 12px;" class="form-control" name="n_paca" >
-                        </div>
-                        <div class="col m-3">
-                            <h3>
-                              <label for="variedad" class="form-label" style="font-weight:bold; font-size: 12px;">Variedad</label><br>
-                            </h3>
-                            <input type="text" class="form-control" style="font-size: 12px;"name="variedad">
-                        </div>
-                        <div class="col m-3">
-                          <h3>
-                            <label for="variedad" class="form-label" style="font-weight:bold; font-size: 12px;">Tamaño</label><br>
-                          </h3>
-                          <input type="text" class="form-control" style="font-size: 12px;"name="tamano">
-                      </div>
-                        <div class="col m-3">
-                            <h3>
-                              <label for="descripcion" class="form-label" style="font-weight:bold; font-size: 12px;">Fecha de elaboración</label><br>
-                            </h3>
-                            <input type="date" class="form-control"style="font-size: 12px;"name="fecha_elaboracion" style="font-size:15px;" >
-                        </div>
-                    </div>
 
-                    <div class="row align-items-start">
-                        <div class="col m-3">
-                            <h3>
-                              <label for="gavillas-funda" class="form-label"style="font-weight:bold; font-size: 12px;">Gavillas funda</label><br>
-                            </h3>
-                            <input type="text" class="form-control" style="font-size: 12px;"name="gavillas_funda" >
-                        </div>
-                        <div class="col m-3">
-                            <h3>
-                              <label for="gavillas-paca" class="form-label" style="font-weight:bold; font-size: 12px;">Gavillas paca</label><br>
-                            </h3>
-                            <input type="text"  class="form-control"style="font-size: 12px;"name="gavillas_paca">
-                        </div>
-                        <div class="col m-3">
-                            <h3>
-                              <label for="clase" class="form-label" style="font-weight:bold; font-size: 12px;">Clase</label><br>
-                            </h3>
-                            <input type="text" class="form-control"style="font-size: 12px;"name="clase" style="font-size:15px;" >
-                        </div>
-                        <div class="col m-3">
-                          <h3>
-                            <label for="gavillas-paca" class="form-label" style="font-weight:bold; font-size: 12px;">Prom. Gavillas</label><br>
-                          </h3>
-                          <input type="text"  class="form-control"style="font-size: 12px;"name="prom_gavillas">
-                      </div>
-                        
-                    </div>
-                    <div class="col p-5 ">
-                      <input type="submit" class="btn color-btn text-white" style="font-weight:bold; font-size: 12px;" value="REGISTRAR">
-                  </div>
-                </form>
-            </div>
-        </div> 
+<body class="body">
+  <%- include('navbar')%>
+    <div class="d-flex justify-content-center text-white mt-5">
+      <div class="d-flex flex-column w-50 text-center bd-highlight mb-3 border border-2 rounded-3 ">
+        <div class="actualizar text-white color-head rounded-3">
+          <h5 style="font-weight:bold;">Registro de etiquetas fundas de capa</h5>
+          <div class="container bg-white text-black rounded-3">
+            <form action="/tickets" method="POST">
+              <div class="row align-items-start">
+                <div class="col m-3">
+                  <h3>
+                    <label for="paca" class="form-label" style="font-weight:bold; font-size: 12px;">Número de
+                      paca</label><br>
+                  </h3>
+                  <input type="text" style="font-size: 12px;" class="form-control" name="n_paca">
+                </div>
+                <div class="col m-3">
+                  <script>
+                    const infoVariedad = require('./ruta/al/archivo/infoVariedad.js');
+                  </script>
+                  <h3>
+                    <label for="variedad" class="form-label"
+                      style="font-weight:bold; font-size: 12px;">Variedad</label><br>
+                  </h3>
+                  <select class="form-select" name="variedad">
+                    <% for (let i = 0; i < variedades.length; i++) { %>
+                      <option value="<%= variedades[i] %>"><%= variedades[i] %></option>
+                    <% } %>
+                  </select>
+                </div>
+                <div class="col m-3">
+                  <h3>
+                    <label for="variedad" class="form-label"
+                      style="font-weight:bold; font-size: 12px;">Tamaño</label><br>
+                  </h3>
+                  <input type="text" class="form-control" style="font-size: 12px;" name="tamano">
+                </div>
+                <div class="col m-3">
+                  <h3>
+                    <label for="descripcion" class="form-label" style="font-weight:bold; font-size: 12px;">Fecha de
+                      elaboración</label><br>
+                  </h3>
+                  <input type="date" class="form-control" style="font-size: 12px;" name="fecha_elaboracion"
+                    style="font-size:15px;">
+                </div>
+              </div>
+
+              <div class="row align-items-start">
+                <div class="col m-3">
+                  <h3>
+                    <label for="gavillas-funda" class="form-label" style="font-weight:bold; font-size: 12px;">Gavillas
+                      funda</label><br>
+                  </h3>
+                  <input type="text" class="form-control" style="font-size: 12px;" name="gavillas_funda">
+                </div>
+                <div class="col m-3">
+                  <h3>
+                    <label for="gavillas-paca" class="form-label" style="font-weight:bold; font-size: 12px;">Gavillas
+                      paca</label><br>
+                  </h3>
+                  <input type="text" class="form-control" style="font-size: 12px;" name="gavillas_paca">
+                </div>
+                <div class="col m-3">
+                  <h3>
+                    <label for="clase" class="form-label" style="font-weight:bold; font-size: 12px;">Clase</label><br>
+                  </h3>
+                  <input type="text" class="form-control" style="font-size: 12px;" name="clase" style="font-size:15px;">
+                </div>
+                <div class="col m-3">
+                  <h3>
+                    <label for="gavillas-paca" class="form-label" style="font-weight:bold; font-size: 12px;">Prom.
+                      Gavillas</label><br>
+                  </h3>
+                  <input type="text" class="form-control" style="font-size: 12px;" name="prom_gavillas">
+                </div>
+
+              </div>
+              <div class="col p-5 ">
+                <input type="submit" class="btn color-btn text-white" style="font-weight:bold; font-size: 12px;"
+                  value="REGISTRAR">
+              </div>
+            </form>
+          </div>
         </div>
-        </div>
+      </div>
+    </div>
 
 
 
 </body>
+
 </html>
