--- a/views/tickets/crear.ejs
+++ b/views/tickets/crear.ejs
@@ -37,6 +37,12 @@
                   <input type="text" style="font-size: 12px;" class="form-control" name="n_paca">
                 </div>
                 <div class="col m-3">
+                  <h3>
+                    <label for="clase" class="form-label" style="font-weight:bold; font-size: 12px;">Clase</label><br>
+                  </h3>
+                  <input type="text" class="form-control" style="font-size: 12px;" name="clase" style="font-size:15px;">
+                </div>
+                <div class="col m-3">
                   <script>
                     const infoVariedad = require('./ruta/al/archivo/infoVariedad.js');
                   </script>
@@ -54,13 +60,6 @@
                 </div>
                 <div class="col m-3">
                   <h3>
-                    <label for="variedad" class="form-label"
-                      style="font-weight:bold; font-size: 12px;">Tamaño</label><br>
-                  </h3>
-                  <input type="text" class="form-control" style="font-size: 12px;" name="tamano">
-                </div>
-                <div class="col m-3">
-                  <h3>
                     <label for="descripcion" class="form-label" style="font-weight:bold; font-size: 12px;">Fecha de
                       elaboración</label><br>
                   </h3>
@@ -72,10 +71,10 @@
               <div class="row align-items-start">
                 <div class="col m-3">
                   <h3>
-                    <label for="gavillas-funda" class="form-label" style="font-weight:bold; font-size: 12px;">Gavillas
-                      funda</label><br>
+                    <label for="hojas-gavilla" class="form-label" style="font-weight:bold; font-size: 12px;">Hojas
+                      Gavilla</label><br>
                   </h3>
-                  <input type="text" class="form-control" style="font-size: 12px;" name="gavillas_funda">
+                  <input type="text" class="form-control" style="font-size: 12px;" name="hojas_gavillas">
                 </div>
                 <div class="col m-3">
                   <h3>
@@ -86,9 +85,10 @@
                 </div>
                 <div class="col m-3">
                   <h3>
-                    <label for="clase" class="form-label" style="font-weight:bold; font-size: 12px;">Clase</label><br>
+                    <label for="tamaño" class="form-label"
+                      style="font-weight:bold; font-size: 12px;">Tamaño</label><br>
                   </h3>
-                  <input type="text" class="form-control" style="font-size: 12px;" name="clase" style="font-size:15px;">
+                  <input type="text" class="form-control" style="font-size: 12px;" name="tamano">
                 </div>
                 <div class="col m-3">
                   <h3>
