--- a/views/tickets/crear.ejs
+++ b/views/tickets/crear.ejs
@@ -79,7 +79,7 @@
                     <label for="hojas-gavilla" class="form-label" style="font-weight:bold; font-size: 12px;">Hojas
                       Gavilla</label><br>
                   </h3>
-                  <input type="text" class="form-control" style="font-size: 12px;" name="hojas_gavillas">
+                  <input type="text" class="form-control" style="font-size: 12px;" name="hojas_gavilla">
                 </div>
                 <div class="col m-3">
                   <h3>
